--- a/pom.xml
+++ b/pom.xml
@@ -85,12 +85,12 @@
             <version>4.1.17</version>
         </dependency>
 
-<!--        &lt;!&ndash;验证码&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>com.github.axet</groupId>-->
-<!--            <artifactId>kaptcha</artifactId>-->
-<!--            <version>0.0.9</version>-->
-<!--        </dependency>-->
+        <!--图片验证码：Hutool-captcha、Google Kaptcha（本次选用）-->
+        <dependency>
+            <groupId>com.github.axet</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>0.0.9</version>
+        </dependency>
 
 <!--        &lt;!&ndash;shiro权限框架&ndash;&gt;-->
 <!--        <dependency>-->
