--- a/pom.xml
+++ b/pom.xml
@@ -92,18 +92,19 @@
             <version>0.0.9</version>
         </dependency>
 
-<!--        &lt;!&ndash;shiro权限框架&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.shiro</groupId>-->
-<!--            <artifactId>shiro-spring</artifactId>-->
-<!--            <version>1.4.0</version>-->
-<!--        </dependency>-->
+        <!--shiro权限框架-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.4.0</version>
+        </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>net.mingsoft</groupId>-->
-<!--            <artifactId>shiro-freemarker-tags</artifactId>-->
-<!--            <version>0.1</version>-->
-<!--        </dependency>-->
+        <!--shiro-freemarker-tags标签-->
+        <dependency>
+            <groupId>net.mingsoft</groupId>
+            <artifactId>shiro-freemarker-tags</artifactId>
+            <version>0.1</version>
+        </dependency>
 
 <!--        &lt;!&ndash;websocket&ndash;&gt;-->
 <!--        <dependency>-->
