v3_detail：收藏文章（判断用户是否收藏了文章、加入收藏、取消收藏）、Shiro自定义过滤器【判断请求是否是Ajax请求，还是Web请求】

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,11 +10,11 @@ spring:
       classic_compatible: true
       datetime_format: yyyy-MM-dd HH:mm
       number_format: 0.##
+    cache: false  # 清除缓存实现热部署
   redis:
     host: 127.0.0.1
     post: 6379
     password: myslayers
-
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
 
