v4_RabbitMQ：全文搜索-消息实时更新，【通知消息给RabbitMQ，告知 ES（更新文章或添加文章）、（删除文章）】

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,12 @@ spring:
       repositories:
         enabled: true
 
+  rabbitmq:
+    username: guest
+    password: guest
+    host: 127.0.0.1
+    port: 5672
+
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
 
