--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,35 +1,6 @@
 spring:
-  datasource:
-    #    driver-class-name: com.mysql.cj.jdbc.Driver
-    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:p6spy:mysql://127.0.0.1:3306/xblog?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=UTC
-    username: root
-    password: 4023615
-
-  freemarker:
-    settings:
-      classic_compatible: true
-      datetime_format: yyyy-MM-dd HH:mm
-      number_format: 0.##
-    cache: false  # 清除缓存实现热部署
-
-  redis:
-    host: 127.0.0.1
-    post: 6379
-    password: myslayers
-
-  data:
-    elasticsearch:
-      cluster-name: elasticsearch
-      cluster-nodes: 127.0.0.1:9300
-      repositories:
-        enabled: true
-
-  rabbitmq:
-    username: guest
-    password: guest
-    host: 127.0.0.1
-    port: 5672
+  profiles:
+    active: win
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
@@ -37,3 +8,7 @@ mybatis-plus:
 file:
   upload:
     dir: ${user.dir}/upload
+
+im:
+  server:
+    port: 9326
