--- a/vue-admin/vue-admin-java/pom.xml
+++ b/vue-admin/vue-admin-java/pom.xml
@@ -60,17 +60,25 @@
       <artifactId>spring-boot-starter-freemarker</artifactId>
     </dependency>
 
-    <!--shiro-redis、jwt 实现会话共享、身份验证-->
-<!--    <dependency>-->
-<!--      <groupId>org.crazycake</groupId>-->
-<!--      <artifactId>shiro-redis-spring-boot-starter</artifactId>-->
-<!--      <version>3.2.1</version>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>io.jsonwebtoken</groupId>-->
-<!--      <artifactId>jjwt</artifactId>-->
-<!--      <version>0.9.1</version>-->
-<!--    </dependency>-->
+    <!--security-redis、jwt、Kaptcha -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.axet</groupId>
+      <artifactId>kaptcha</artifactId>
+      <version>0.0.9</version>
+    </dependency>
 
     <!--lombok、hutool、commons 工具类-->
     <dependency>
