--- a/vue-admin/vue-admin-java/pom.xml
+++ b/vue-admin/vue-admin-java/pom.xml
@@ -14,10 +14,11 @@
   <name>vue-admin-java</name>
 
   <properties>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
     <java.version>1.8</java.version>
     <maven.test.skip>true</maven.test.skip>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
+    <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
